2007-11-19  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Remove ipmimonitoring subpackage.  Move into
	core package.
	
2007-11-19  Phil Knirsch <pknirsch@redhat.com>

	* bmc-watchdog/freeipmi-bmc-watchdog.sysconfig: Added missing -d
	command option.

	* bmc-config/src/bmc-config-argp.c (bmc_config_args_validate),
	pef-config/src/pef-config-argp.c (pef_config_args_validate): Fix
	incorrect use of open with O_CREATE and without mode.

	* ipmidetect/freeipmi-ipmidetectd.init: Do not start by default
	after installation.  Added a Short Description and made the
	Description more meaningful.  Use correct lock file in
	/var/lock/subsys/.

	* freeipmi.spec: Use a valid Fedora license.  Fix the groups for
	all [sub]packages.  Add necessary prereqs where necessary (due
	to scripts).  Limit build to ix86, x86_64, ia64 and alpha (due
	to iopl missing on other archs).  Disable build of static libs
	(Fedora guideline).  Use absolute path for ldconfig.  Add
	/sbin/ldconfig post and postun scripts due to libs.  Move all
	development libs to the -devel package ( libipmimonitoring.so).
	
2007-11-02  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Minor updates.
	
2007-11-02  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prepare for alpha release.

	* NEWS: Update

	* Tagged Release-0_5_0_alpha0.

2007-10-18  Albert Chu <chu11@llnl.gov>

	* Fix copyright on LLNL created tools/projects.
	
2007-10-17  Albert Chu <chu11@llnl.gov>

	* Fix copyright dates on LLNL created tools/projects.

	* DISCLAIMER.bmc-watchdog, DISCLAIMER.ipmipower,
        DISCLAIMER.ipmiping, DISCLAIMER.rmcpping,
        DISCLAIMER.ipmiconsole, DISCLAIMER.ipmimonitoring,
        DISCLAIMER.pstdout, DISCLAIMER.ipmidetect,
        DISCLAIMER.ipmi-fru: Update with new DISCLAIMER.

	* DISCLAIMER.bmc-watchdog.UC, DISCLAIMER.ipmipower.UC,
	DISCLAIMER.ipmiping.UC, DISCLAIMER.rmcpping.UC,
	DISCLAIMER.ipmiconsole.UC, DISCLAIMER.ipmimonitoring.UC,
	DISCLAIMER.pstdout.UC, DISCLAIMER.ipmidetect.UC,