@@ -47,8 +47,9 @@ extern "C" {
 #define IPMI_SSIF_CTX_ERR_BUSY                 7
 #define IPMI_SSIF_CTX_ERR_OUT_OF_MEMORY        8
 #define IPMI_SSIF_CTX_ERR_DEVICE_NOT_FOUND     9
-#define IPMI_SSIF_CTX_ERR_INTERNAL_ERROR      10
-#define IPMI_SSIF_CTX_ERR_ERRNUMRANGE         11
+#define IPMI_SSIF_CTX_ERR_SYSTEM_ERROR        10
+#define IPMI_SSIF_CTX_ERR_INTERNAL_ERROR      11
+#define IPMI_SSIF_CTX_ERR_ERRNUMRANGE         12
 
 #define IPMI_SSIF_FLAGS_DEFAULT       0x00000000
 #define IPMI_SSIF_FLAGS_NONBLOCKING   0x00000001
