@@ -333,6 +333,7 @@ static char * ipmi_ssif_ctx_errmsg[] =
     "BMC busy",
     "out of memory",
     "device not found",
+    "internal system error",
     "internal error",
     "errnum out of range",
     NULL,
@@ -535,7 +536,7 @@ ipmi_ssif_ctx_io_init(ipmi_ssif_ctx_t ctx)
 	       || errno == ENAMETOOLONG)
 	ctx->errnum = IPMI_SSIF_CTX_ERR_DEVICE_NOT_FOUND;
       else
-	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
       return (-1);
     }
 
@@ -544,7 +545,7 @@ ipmi_ssif_ctx_io_init(ipmi_ssif_ctx_t ctx)
       if (errno == EACCES || errno == EPERM)
 	ctx->errnum = IPMI_SSIF_CTX_ERR_PERMISSION;
       else
-	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
       return (-1);
     }
 
@@ -586,7 +587,7 @@ ipmi_ssif_write (ipmi_ssif_ctx_t ctx,
           if (errno == EINTR || errno == EAGAIN)
             ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_BUSY);
           else
-            ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+            ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
           goto cleanup;
         }
     }
@@ -609,7 +610,7 @@ ipmi_ssif_write (ipmi_ssif_ctx_t ctx,
       if (errno == EACCES || errno == EPERM)
 	ctx->errnum = IPMI_SSIF_CTX_ERR_PERMISSION;
       else
-	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
       goto cleanup_unlock;
     }
 
@@ -655,7 +656,7 @@ ipmi_ssif_read (ipmi_ssif_ctx_t ctx,
       if (errno == EACCES || errno == EPERM)
 	ctx->errnum = IPMI_SSIF_CTX_ERR_PERMISSION;
       else
-	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+	ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
       goto cleanup_unlock;
     }
   
@@ -729,7 +730,7 @@ _ipmi_ssif_cmd_write(ipmi_ssif_ctx_t ctx,
   
   if (ipmi_ssif_write (ctx, pkt, pkt_len) < 0)
     {
-      ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+      ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
       return (-1);
     }
 
@@ -794,7 +795,7 @@ _ipmi_ssif_cmd_read(ipmi_ssif_ctx_t ctx,
 				  pkt,
 				  pkt_len)) < 0)
     {
-      ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_INTERNAL_ERROR);
+      ERR_LOG(ctx->errnum = IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
       goto cleanup;
     }
   
